# accl

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/api/cpp/include/ascend_ops/: all2all.h
src/api/python/bindings/: all2all_binding.cpp
src/core/: CMakeLists.txt  build.sh
src/core/include/: aclnn_all2all.h
src/core/operators/all2all/: all2all.cpp  all2all.h
tests/benchmark/: CMakeLists.txt
tests/benchmark/common/: benchmark_utils.cpp  benchmark_utils.h
tests/benchmark/openmpi/: all2all_benchmark.cpp
tools/: upload.py  upload.sh  upload_code.py  upload_code_scp.py
